# data-contract-validator

./: .gitignore  CHANGELOG.md  README.md  demo.tape  mkdocs.yml  pyproject.toml
contracts/: customers_v1.yaml
data/: customers_sample.csv
docs/: index.md
docs/api/: index.md  loader.md  reporter.md  validator.md
docs/api/checks/: constraint_checks.md  schema_checks.md  type_checks.md
docs/api/models/: contract.md  report.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  contracts.md
src/data_contract_validator/: __init__.py  cli.py  loader.py  reporter.py  validator.py
src/data_contract_validator/checks/: __init__.py  constraint_checks.py  schema_checks.py  type_checks.py
src/data_contract_validator/models/: __init__.py  contract.py  report.py
tests/: conftest.py  test_cli.py  test_constraint_checks.py  test_loader.py  test_models.py  test_reporter.py  test_schema_checks.py  test_type_checks.py  test_validator.py
